syntax = "proto3";

package kdrive;

service KdriveService {
  rpc IsAuthenticated(Empty) returns (AuthStatus);
  rpc StartInitialAuthFlow(Empty) returns (AuthUrlResponse);
  rpc ContinueInitialAuthFlow(Empty) returns (AuthFlowResult);

  rpc SubscribeEvents(Empty) returns (stream ServerEvent);
}

message Empty {}

message AuthStatus {
  bool is_authenticated = 1;
}

message AuthUrlResponse {
  string auth_url = 1;
}

message AuthFlowResult {
  bool success = 1;
}

message I18nEvent {
  string key = 1;
  map<string, string> args = 2;
}

message AuthFlowCompleted {}

message ServerEvent {
  oneof event {
    AuthFlowCompleted auth_flow_completed = 1;
    I18nEvent i18n_event = 2;
  }
}

